--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.karumi:dexter:6.2.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
